--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       type="image/x-icon"
     />
   </head>
+
   <body>
     <div class="mainContainer">
       <nav class="navbar">
@@ -36,11 +37,12 @@
       </nav>
       <section class="hero">
         <div class="container">
-          <img src="./assets/heroBg-Person.png" alt="person" class="personBg">
+          <img src="./assets/heroBg-Person.png" alt="person" class="personBg" />
           <div class="col-6 left">
             <h2 class="herohead">
-              <span class="libra">Grand Opening</span> of Our New High-Resolution 3T MRI
-              Facility in <span class="hrBottom">Costa Mesa!</span>
+              <span class="libra">Grand Opening</span> of Our New
+              High-Resolution 3T MRI Facility in
+              <span class="hrBottom">Costa Mesa!</span>
             </h2>
             <p class="para-sm">
               Experience State-of-the-Art Imaging with 3T MRI, CT, Ultrasound,
@@ -52,10 +54,482 @@
             </button>
           </div>
           <div class="col-6 right">
-            <img src="./assets/heroImg.png" alt="hero image" class="rightImage">
+            <img
+              src="./assets/heroImg.png"
+              alt="hero image"
+              class="rightImage"
+            />
           </div>
         </div>
       </section>
+
+      <section class="fecility-sec">
+        <div class="container">
+          <div class="top">
+            <div class="col-6 left">
+              <img
+                src="./assets/facilityImg.jpg"
+                alt="facility"
+                class="facility"
+              />
+            </div>
+            <div class="col-6 right">
+              <img src="./assets/sheild.png" alt="sheild" class="sheild" />
+              <h2>Enhanced Diagnostic Accuracy</h2>
+              <p class="para">
+                With superior imaging capabilities, the 3T MRI can detect
+                smaller abnormalities and subtle differences in tissues, leading
+                to more precise diagnoses
+              </p>
+              <button class="btn btn-blue mt-5">
+                Schedule An MRI
+                <span class="icon calendar-icon"></span>
+              </button>
+            </div>
+          </div>
+          <div class="bottom">
+            <div class="tech-card">
+              <img src="./assets/icon/hexagon.svg" alt="" class="card-icon" />
+              <div class="card-body">
+                <h3>Advance Technology</h3>
+                <p class="para">
+                  Located at ExpertMRI Costa Mesa, our facility is equipped with
+                  the latest in medical imaging technology, ensuring top-notch
+                  care for our patients.
+                </p>
+              </div>
+            </div>
+            <div class="tech-card">
+              <img
+                src="./assets/icon/heart.svg"
+                alt="heart"
+                class="card-icon"
+              />
+              <div class="card-body">
+                <h3>State of the art facility</h3>
+                <p class="para">
+                  Located at ExpertMRI Costa Mesa, our facility is equipped with
+                  the latest in medical imaging technology, ensuring top-notch
+                  care for our patients.
+                </p>
+              </div>
+            </div>
+            <div class="tech-card">
+              <img src="./assets/icon/time.svg" alt="time" class="card-icon" />
+              <div class="card-body">
+                <h3>Faster Scanning Times</h3>
+                <p class="para">
+                  Located at ExpertMRI Costa Mesa, our facility is equipped with
+                  the latest in medical imaging technology, ensuring top-notch
+                  care for our patients.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="container">
+          <div class="top">
+            <div class="reviews-card">
+              <img
+                src="./assets/icon/Google.png"
+                alt="Google"
+                class="google icon-mid"
+              />
+              <img
+                src="./assets/icon/star.svg"
+                alt="Star"
+                class="star icon-mid"
+              />
+              <p>
+                <span class="rating">4.8</span>
+                Based on 300+ Reviews
+              </p>
+            </div>
+          </div>
+
+          <div class="bottom marquee">
+            <div
+              class="marquee-block h-Bar"
+              behavior="scroll"
+              scrollamount="20"
+            >
+              <ul class="marquee-item-list">
+                <li>
+                  <img
+                    src="./assets/testimonial-logo.png"
+                    class="testi-logo"
+                    alt="testimonial-logo"
+                  />
+                  <div class="body">
+                    <span class="quote-icon icon"></span>
+                    <p class="para">
+                      My experience was great! Very efficient , the medical
+                      staff was great very helpful and friendly...
+                    </p>
+                    <h5 class="body-name">Emperatriz A.</h5>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./assets/testimonial-logo.png"
+                    class="testi-logo"
+                    alt="testimonial-logo"
+                  />
+                  <div class="body">
+                    <span class="quote-icon icon"></span>
+                    <p class="para">
+                      I've been to this place twice already and my experience
+                      has been great!....
+                    </p>
+                    <h5 class="body-name">William P.</h5>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./assets/testimonial-logo.png"
+                    class="testi-logo"
+                    alt="testimonial-logo"
+                  />
+                  <div class="body">
+                    <span class="quote-icon icon"></span>
+                    <p class="para">
+                      I've been to this place twice already and my experience
+                      has been great!....
+                    </p>
+                    <h5 class="body-name">William P.</h5>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="hospital">
+        <div class="container">
+          <p class="para border-dotted">
+            Experience Precision Like Never Before
+          </p>
+          <h2 class="head">
+            Introducing Our State-of-the-Art <span>3T MRI Machine</span> at
+            ExpertMRI Costa Mesa
+          </h2>
+          <img src="./assets/mri.png" alt="" />
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="container">
+          <div class="col-6 left">
+            <h2>What can we detect through our 3T MRI scans</h2>
+            <p class="para">
+              Ac turpis egestas sed tempus urna et pharetra pharetra massa.
+              Proin sagittis nisl rhoncus mattis rhoncus. Vulputate ut pharetra
+              sit
+            </p>
+            <ul class="about-list">
+              <div class="left-list">
+                <li>
+                  <p>Brain, Spinal Cord Disorders and Tumors</p>
+                </li>
+                <li>
+                  <p>Musculoskeletal Disorders</p>
+                </li>
+                <li>
+                  <p>Heart and Blood Vessel Conditions</p>
+                </li>
+              </div>
+              <div class="right-list">
+                <li>
+                  <p>Abdominal and Pelvic Disorders</p>
+                </li>
+                <li>
+                  <p>Infection and Inflammatory Conditions</p>
+                </li>
+                <li>
+                  <p>Breast Tumors</p>
+                </li>
+              </div>
+            </ul>
+            <h4>
+              Are you ready to re-define your health journey? Feel free to
+              contact us
+            </h4>
+            <div class="btn-grp">
+              <a href="callto:(877) MRI-8888" class="btn btn-light-blue">
+                Call us : (877) MRI-8888
+                <span class="icon call-icon"></span>
+              </a>
+              <button class="btn btn-blue mt-5">
+                Schedule An MRI
+                <span class="icon calendar-icon"></span>
+              </button>
+            </div>
+          </div>
+          <div class="col-6 right">
+            <img src="./assets/human-body.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="whyUs">
+        <div class="container">
+          <h2>Why choose ExpertMRI?</h2>
+          <div class="card">
+            <div class="card-head">
+              <span class="number">01</span>
+              <img src="./assets/whyusCard1.png" alt="why choose us" />
+            </div>
+            <div class="card-body">
+              <h4 class="head">Reduced Need for Contrast Agents</h4>
+              <p class="para">
+                In many cases, the superior imaging capability of the 3T MRI
+                reduces the need for contrast agents, making the procedure safer
+                for patients.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-head">
+              <span class="number">02</span>
+              <img src="./assets/whyusCard2.png" alt="why choose us" />
+            </div>
+            <div class="card-body">
+              <h4 class="head">Unmatched Image Quality</h4>
+              <p class="para">
+                The 3T MRI machine offers higher resolution images, providing
+                greater detail and clarity for more accurate diagnoses.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="location">
+        <div class="container">
+          <div class="col-6 left">
+            <h2 class="head">We are located at ExpertMRI Costa Mesa</h2>
+            <div class="details">
+              <h6 class="title">Our address</h6>
+              <p class="para">
+                3731 S Plaza Dr, Santa Ana, CA 92704, United States
+              </p>
+            </div>
+            <div class="details">
+              <h6 class="title">Phone</h6>
+              <p class="para">(877) MRI-8888</p>
+            </div>
+            <div class="details">
+              <h6 class="title">Email</h6>
+              <p class="para">scheduling@expertmri.com</p>
+            </div>
+            <button class="btn btn-blue mt-5">
+              View Location On Map
+              <span class="icon map-icon"></span>
+            </button>
+          </div>
+          <div class="col-6 right"></div>
+          <div class="box">
+            <h6>Locations all through southern California</h6>
+            <img src="./assets/location-bg.png" alt="location image" />
+          </div>
+        </div>
+      </section>
+      <section class="faq">
+        <div class="container">
+          <div class="col-6 left">
+            <h2 class="head">You ask, We answer</h2>
+            <div class="accordionWrapper">
+              <div class="accordionItem open">
+                <h2 class="acc-head">
+                  What is a 3T MRI ?
+                  <span class="icon toggle-icon"></span>
+                </h2>
+                <div class="accordionItemContent">
+                  <p>
+                    The 3T MRI machine offers higher resolution images,
+                    providing greater detail and clarity for more accurate
+                    diagnoses.
+                  </p>
+                </div>
+              </div>
+
+              <div class="accordionItem close">
+                <h2 class="acc-head">
+                  How Does a 3T MRI works ?
+                  <span class="icon toggle-icon"></span>
+                </h2>
+                <div class="accordionItemContent">
+                  <p>
+                    The 3T MRI machine offers higher resolution images,
+                    providing greater detail and clarity for more accurate
+                    diagnoses.
+                  </p>
+                </div>
+              </div>
+
+              <div class="accordionItem close">
+                <h2 class="acc-head">
+                  What is a 3T MRI ?
+                  <span class="icon toggle-icon"></span>
+                </h2>
+                <div class="accordionItemContent">
+                  <p>
+                    The 3T MRI machine offers higher resolution images,
+                    providing greater detail and clarity for more accurate
+                    diagnoses.
+                  </p>
+                </div>
+              </div>
+              <div class="accordionItem close">
+                <h2 class="acc-head">
+                  What is a 3T MRI ?
+                  <span class="icon toggle-icon"></span>
+                </h2>
+                <div class="accordionItemContent">
+                  <p>
+                    The 3T MRI machine offers higher resolution images,
+                    providing greater detail and clarity for more accurate
+                    diagnoses.
+                  </p>
+                </div>
+              </div>
+              <div class="accordionItem close">
+                <h2 class="acc-head">
+                  Is there any side effects after MRI scan?
+                  <span class="icon toggle-icon"></span>
+                </h2>
+                <div class="accordionItemContent">
+                  <p>
+                    The 3T MRI machine offers higher resolution images,
+                    providing greater detail and clarity for more accurate
+                    diagnoses.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 right">
+            <img src="./assets/faqImage.jpg" alt="faqImage" class="faqImage" />
+            <p class="para">
+              The 3T MRI machine offers higher resolution images, providing
+              greater detail and clarity for more accurate diagnoses.
+            </p>
+            <a href="callto:(877) MRI-8888" class="btn btn-light-blue">
+              Call us : (877) MRI-8888
+              <span class="icon call-icon"></span>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="top">
+            <h6>
+              Your modern medical diagnostic service in Costa Mesa, Orange
+              County
+            </h6>
+            <button class="btn btn-blue mt-5">
+              Schedule An MRI
+              <span class="icon calendar-icon"></span>
+            </button>
+          </div>
+          <div class="bottom">
+            <div class="left">
+              <div class="details">
+                <p>Phone</p>
+                <a href="callto:(877) MRI-8888">(877) MRI-8888</a>
+              </div>
+              <div class="details">
+                <p>Email</p>
+                <a href="mailto:scheduling@expertmri.com"
+                  >scheduling@expertmri.com</a
+                >
+              </div>
+            </div>
+            <div class="right">
+              <div class="social-icons">
+                <a
+                  href="https://www.linkedin.com/company/expert-mri-medical-diagnostics/"
+                >
+                  <span class="icon linkedin"></span>
+                </a>
+                <a href="https://www.facebook.com/expertmri/">
+                  <span class="icon facebook"></span>
+                </a>
+                <a href="https://x.com/Expert_MRI">
+                  <span class="icon twitter"></span>
+                </a>
+                <a
+                  href="https://www.youtube.com/channel/UCN8HBDqaOvN8gf2pJ48_ZNQ"
+                >
+                  <span class="icon youtube"></span>
+                </a>
+                <a href="https://www.instagram.com/ExpertMRI/">
+                  <span class="icon instagram"></span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <img
+            src="./assets/logo/ExpertMRI.svg"
+            alt="logo icon"
+            class="footerLogo"
+          />
+        </div>
+      </footer>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      let scrollpos = window.scrollY;
+      const header = document.querySelector("nav");
+      const header_height = header.offsetHeight;
+
+      const add_class_on_scroll = () => header.classList.add("bg-light");
+      const remove_class_on_scroll = () => header.classList.remove("bg-light");
+
+      window.addEventListener("scroll", function () {
+        scrollpos = window.scrollY;
+
+        if (scrollpos >= header_height) {
+          add_class_on_scroll();
+        } else {
+          remove_class_on_scroll();
+        }
+      });
+
+      // marquee
+      var elements = $("ul.marquee-item-list li").length;
+      for (var i = 0; i < elements; i++) {
+        $(".marquee-item-list").clone().prependTo(".marquee-block");
+      }
+      var liEle = [];
+      var liEle = $(".marquee-item-list li");
+
+      // paralax
+      const parallax = document.getElementById("parallax");
+      window.addEventListener("scroll", function () {
+        let offset = window.pageYOffset;
+        let demo = (parallax.style.backgroundPositionY = -offset * 0.5 + "px");
+      });
+
+      // accordion
+      var accItem = document.getElementsByClassName("accordionItem");
+      var accHD = document.getElementsByClassName("acc-head");
+      for (i = 0; i < accHD.length; i++) {
+        accHD[i].addEventListener("click", toggleItem, false);
+      }
+      function toggleItem() {
+        var itemClass = this.parentNode.className;
+        for (i = 0; i < accItem.length; i++) {
+          accItem[i].className = "accordionItem close";
+        }
+        if (itemClass == "accordionItem close") {
+          this.parentNode.className = "accordionItem open";
+        }
+      }
+    </script>
   </body>
 </html>
