--- a/index.html
+++ b/index.html
@@ -201,6 +201,51 @@
                     <h5 class="body-name">William P.</h5>
                   </div>
                 </li>
+                <li>
+                  <img
+                    src="./assets/testimonial-logo.png"
+                    class="testi-logo"
+                    alt="testimonial-logo"
+                  />
+                  <div class="body">
+                    <span class="quote-icon icon"></span>
+                    <p class="para">
+                      I've been to this place twice already and my experience
+                      has been great!....
+                    </p>
+                    <h5 class="body-name">William P.</h5>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./assets/testimonial-logo.png"
+                    class="testi-logo"
+                    alt="testimonial-logo"
+                  />
+                  <div class="body">
+                    <span class="quote-icon icon"></span>
+                    <p class="para">
+                      I've been to this place twice already and my experience
+                      has been great!....
+                    </p>
+                    <h5 class="body-name">William P.</h5>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./assets/testimonial-logo.png"
+                    class="testi-logo"
+                    alt="testimonial-logo"
+                  />
+                  <div class="body">
+                    <span class="quote-icon icon"></span>
+                    <p class="para">
+                      I've been to this place twice already and my experience
+                      has been great!....
+                    </p>
+                    <h5 class="body-name">William P.</h5>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
@@ -216,7 +261,7 @@
             Introducing Our State-of-the-Art <span>3T MRI Machine</span> at
             ExpertMRI Costa Mesa
           </h2>
-          <img src="./assets/mri.png" alt="" />
+          <img src="./assets/mri.png" alt="mri image" class="hospitalMri" />
         </div>
       </section>
 
@@ -259,11 +304,11 @@
             </h4>
             <div class="btn-grp">
               <a href="callto:(877) MRI-8888" class="btn btn-light-blue">
-                Call us : (877) MRI-8888
+                <p class="text-wrap">Call us : (877) MRI-8888</p>
                 <span class="icon call-icon"></span>
               </a>
               <button class="btn btn-blue mt-5">
-                Schedule An MRI
+                <p class="text-wrap">Schedule An MRI</p>
                 <span class="icon calendar-icon"></span>
               </button>
             </div>
@@ -315,22 +360,27 @@
                 3731 S Plaza Dr, Santa Ana, CA 92704, United States
               </p>
             </div>
-            <div class="details">
-              <h6 class="title">Phone</h6>
-              <p class="para">(877) MRI-8888</p>
-            </div>
-            <div class="details">
-              <h6 class="title">Email</h6>
-              <p class="para">scheduling@expertmri.com</p>
+            <div class="left-box">
+              <div class="details">
+                <h6 class="title">Phone</h6>
+                <p class="para">(877) MRI-8888</p>
+              </div>
+              <div class="details">
+                <h6 class="title">Email</h6>
+                <p class="para">scheduling@expertmri.com</p>
+              </div>
             </div>
             <button class="btn btn-blue mt-5">
-              View Location On Map
+              <p>View Location On Map</p>
               <span class="icon map-icon"></span>
             </button>
           </div>
           <div class="col-6 right"></div>
           <div class="box">
-            <h6>Locations all through southern California</h6>
+            <div class="text">
+              <span class="icon map-icon"></span>
+              <h6>Locations all through southern California</h6>
+            </div>
             <img src="./assets/location-bg.png" alt="location image" />
           </div>
         </div>
@@ -383,7 +433,7 @@
               </div>
               <div class="accordionItem close">
                 <h2 class="acc-head">
-                  What is a 3T MRI ?
+                  Is MRI safe during pregnancy?
                   <span class="icon toggle-icon"></span>
                 </h2>
                 <div class="accordionItemContent">
@@ -411,14 +461,16 @@
           </div>
           <div class="col-6 right">
             <img src="./assets/faqImage.jpg" alt="faqImage" class="faqImage" />
-            <p class="para">
-              The 3T MRI machine offers higher resolution images, providing
-              greater detail and clarity for more accurate diagnoses.
-            </p>
-            <a href="callto:(877) MRI-8888" class="btn btn-light-blue">
-              Call us : (877) MRI-8888
-              <span class="icon call-icon"></span>
-            </a>
+            <div class="inner-box">
+              <p class="para">
+                The 3T MRI machine offers higher resolution images, providing
+                greater detail and clarity for more accurate diagnoses.
+              </p>
+              <a href="callto:(877) MRI-8888" class="btn btn-light-blue">
+                <p>Call us : (877) MRI-8888</p>
+                <span class="icon call-icon"></span>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -431,7 +483,7 @@
               County
             </h6>
             <button class="btn btn-blue mt-5">
-              Schedule An MRI
+              <p class="text-wrap">Schedule An MRI</p>
               <span class="icon calendar-icon"></span>
             </button>
           </div>
