--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="mainContainer">
       <nav class="navbar">
         <div class="container">
-          <div class="col-6">
+          <div class="col-6 left">
             <img src="./assets/logo/logoLight.webp" alt="" />
           </div>
-          <div class="col-6">
+          <div class="col-6 right">
             <div class="location">
               <img
                 src="./assets/icon/location.svg"
