responsive update mobile-view

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     alt="testimonial-logo"
                   />
                   <div class="body">
-                    <span class="quote-icon icon"></span>
+                    <span class="quote-icon"></span>
                     <p class="para">
                       My experience was great! Very efficient , the medical
                       staff was great very helpful and friendly...
@@ -178,7 +178,7 @@
                     alt="testimonial-logo"
                   />
                   <div class="body">
-                    <span class="quote-icon icon"></span>
+                    <span class="quote-icon"></span>
                     <p class="para">
                       I've been to this place twice already and my experience
                       has been great!....
@@ -193,7 +193,7 @@
                     alt="testimonial-logo"
                   />
                   <div class="body">
-                    <span class="quote-icon icon"></span>
+                    <span class="quote-icon"></span>
                     <p class="para">
                       I've been to this place twice already and my experience
                       has been great!....
@@ -208,7 +208,7 @@
                     alt="testimonial-logo"
                   />
                   <div class="body">
-                    <span class="quote-icon icon"></span>
+                    <span class="quote-icon"></span>
                     <p class="para">
                       I've been to this place twice already and my experience
                       has been great!....
@@ -223,7 +223,7 @@
                     alt="testimonial-logo"
                   />
                   <div class="body">
-                    <span class="quote-icon icon"></span>
+                    <span class="quote-icon"></span>
                     <p class="para">
                       I've been to this place twice already and my experience
                       has been great!....
@@ -238,7 +238,7 @@
                     alt="testimonial-logo"
                   />
                   <div class="body">
-                    <span class="quote-icon icon"></span>
+                    <span class="quote-icon"></span>
                     <p class="para">
                       I've been to this place twice already and my experience
                       has been great!....
