--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="./assets/logo/logoIconLight.png"
       type="image/x-icon"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
 
   <body>
@@ -48,7 +52,7 @@
               Experience State-of-the-Art Imaging with 3T MRI, CT, Ultrasound,
               and X-Ray Technologies
             </p>
-            <button class="btn btn-light mt-5">
+            <button class="btn btn-light trigger">
               Schedule An MRI
               <span class="icon calendar-icon"></span>
             </button>
@@ -81,15 +85,92 @@
                 smaller abnormalities and subtle differences in tissues, leading
                 to more precise diagnoses
               </p>
-              <button class="btn btn-blue mt-5">
+              <button class="btn btn-blue">
                 Schedule An MRI
                 <span class="icon calendar-icon"></span>
               </button>
             </div>
           </div>
           <div class="bottom">
-            <div class="tech-card">
-              <img src="./assets/icon/hexagon.svg" alt="" class="card-icon" />
+            <div class="tech-card hexagon">
+              <span class="card-icon">
+                <svg
+                  id="hexagon"
+                  width="54"
+                  height="54"
+                  viewBox="0 0 54 54"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="hexagon">
+                    <path
+                      id="lines"
+                      d="M11.25 36L22.5 29.25M31.5 24.75L42.75 18M27 11.25V22.5M27 31.5V42.75M11.25 18L22.5 24.75M31.5 29.25L42.75 36"
+                      stroke="#033D5A"
+                      stroke-width="1.5"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      id="outer"
+                      d="M46.125 20.25V33.8523M30.375 46.125L42.75 39.375M10.125 39.375L23.625 46.125M7.875 33.75V20.25M10.125 14.625L23.625 7.875M43.875 14.625L30.375 7.875"
+                      stroke="#033D5A"
+                      stroke-width="1.5"
+                      stroke-linejoin="round"
+                    />
+                    <g id="circles">
+                      <path
+                        id="1"
+                        d="M27 11.25C28.864 11.25 30.375 9.73896 30.375 7.875C30.375 6.01104 28.864 4.5 27 4.5C25.136 4.5 23.625 6.01104 23.625 7.875C23.625 9.73896 25.136 11.25 27 11.25Z"
+                        stroke="#033D5A"
+                        stroke-width="1.5"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        id="4"
+                        d="M27 49.5C28.864 49.5 30.375 47.989 30.375 46.125C30.375 44.261 28.864 42.75 27 42.75C25.136 42.75 23.625 44.261 23.625 46.125C23.625 47.989 25.136 49.5 27 49.5Z"
+                        stroke="#033D5A"
+                        stroke-width="1.5"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        id="6"
+                        d="M7.875 20.25C9.73896 20.25 11.25 18.739 11.25 16.875C11.25 15.011 9.73896 13.5 7.875 13.5C6.01104 13.5 4.5 15.011 4.5 16.875C4.5 18.739 6.01104 20.25 7.875 20.25Z"
+                        stroke="#033D5A"
+                        stroke-width="1.5"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        id="2"
+                        d="M46.125 20.25C47.989 20.25 49.5 18.739 49.5 16.875C49.5 15.011 47.989 13.5 46.125 13.5C44.261 13.5 42.75 15.011 42.75 16.875C42.75 18.739 44.261 20.25 46.125 20.25Z"
+                        stroke="#033D5A"
+                        stroke-width="1.5"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        id="3"
+                        d="M46.125 40.5C47.989 40.5 49.5 38.989 49.5 37.125C49.5 35.261 47.989 33.75 46.125 33.75C44.261 33.75 42.75 35.261 42.75 37.125C42.75 38.989 44.261 40.5 46.125 40.5Z"
+                        stroke="#033D5A"
+                        stroke-width="1.5"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        id="5"
+                        d="M7.875 40.5C9.73896 40.5 11.25 38.989 11.25 37.125C11.25 35.261 9.73896 33.75 7.875 33.75C6.01104 33.75 4.5 35.261 4.5 37.125C4.5 38.989 6.01104 40.5 7.875 40.5Z"
+                        stroke="#033D5A"
+                        stroke-width="1.5"
+                        stroke-linejoin="round"
+                      />
+                    </g>
+                    <path
+                      id="center"
+                      d="M27 21.9375L31.5 24.4688V29.5312L27 32.0625L22.5 29.5312V24.4688L27 21.9375Z"
+                      stroke="#033D5A"
+                      stroke-width="1.5"
+                      stroke-linejoin="round"
+                    />
+                  </g>
+                </svg>
+              </span>
               <div class="card-body">
                 <h3>Advance Technology</h3>
                 <p class="para">
@@ -99,12 +180,32 @@
                 </p>
               </div>
             </div>
-            <div class="tech-card">
-              <img
-                src="./assets/icon/heart.svg"
-                alt="heart"
-                class="card-icon"
-              />
+            <div class="tech-card heart">
+              <span class="card-icon">
+                <svg
+                  id="heart"
+                  width="54"
+                  height="54"
+                  viewBox="0 0 54 54"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    id="line"
+                    d="M43.7909 8.98538C37.757 5.28431 32.4909 6.77579 29.3274 9.15156C28.0301 10.1257 27.3816 10.6128 27 10.6128C26.6184 10.6128 25.97 10.1257 24.6726 9.15156C21.5091 6.77579 16.243 5.28431 10.2092 8.98538C2.29066 13.8426 0.498866 29.8669 18.7639 43.386C22.2429 45.9612 23.9823 47.2486 27 47.2486C30.0177 47.2486 31.7572 45.9612 35.2361 43.386C53.5012 29.8669 51.7093 13.8426 43.7909 8.98538Z"
+                    stroke="#033D5A"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    id="plus"
+                    d="M27 20.25V33.75M20.25 27H33.75"
+                    stroke="#033D5A"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
               <div class="card-body">
                 <h3>State of the art facility</h3>
                 <p class="para">
@@ -114,8 +215,72 @@
                 </p>
               </div>
             </div>
-            <div class="tech-card">
-              <img src="./assets/icon/time.svg" alt="time" class="card-icon" />
+            <div class="tech-card clock">
+              <span class="card-icon">
+                <svg
+                  width="54"
+                  height="54"
+                  viewBox="0 0 54 54"
+                  id="clock"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                    <path
+                      id="Vector"
+                      d="M4.5 49.5H29.25C40.4339 49.5 49.5 40.4339 49.5 29.25C49.5 18.0662 40.4339 9 29.25 9C18.8268 9 10.1192 16.8751 9 27"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      id="Vector_2"
+                      d="M41.625 12.375L43.875 10.125M12.375 10.125L14.625 12.375"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      id="hand"
+                      d="M37.125 20.25L30.5116 26.8634M30.5116 26.8634C29.9007 26.2528 29.057 25.875 28.125 25.875C26.2611 25.875 24.75 27.3861 24.75 29.25C24.75 31.1139 26.2611 32.625 28.125 32.625C29.9889 32.625 31.5 31.1139 31.5 29.25C31.5 28.318 31.1222 27.4743 30.5116 26.8634Z"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      id="Vector_3"
+                      d="M28.125 7.875V4.5"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      id="Vector_4"
+                      d="M23.625 4.5H32.625"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      id="Vector_5"
+                      d="M4.5 33.75H11.25"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      id="Vector_6"
+                      d="M4.5 42.75H15.75"
+                      stroke="#033D5A"
+                      stroke-width="1.55"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                </svg>
+              </span>
               <div class="card-body">
                 <h3>Faster Scanning Times</h3>
                 <p class="para">
@@ -307,7 +472,7 @@
                 <p class="text-wrap">Call us : (877) MRI-8888</p>
                 <span class="icon call-icon"></span>
               </a>
-              <button class="btn btn-blue mt-5">
+              <button class="btn btn-blue">
                 <p class="text-wrap">Schedule An MRI</p>
                 <span class="icon calendar-icon"></span>
               </button>
@@ -370,7 +535,7 @@
                 <p class="para">scheduling@expertmri.com</p>
               </div>
             </div>
-            <button class="btn btn-blue mt-5">
+            <button class="btn btn-blue">
               <p>View Location On Map</p>
               <span class="icon map-icon"></span>
             </button>
@@ -482,7 +647,7 @@
               Your modern medical diagnostic service in Costa Mesa, Orange
               County
             </h6>
-            <button class="btn btn-blue mt-5">
+            <button class="btn btn-blue">
               <p class="text-wrap">Schedule An MRI</p>
               <span class="icon calendar-icon"></span>
             </button>
@@ -531,57 +696,144 @@
           />
         </div>
       </footer>
+
+      <div id="myModal" class="modal show-modal">
+        <div class="modal-content">
+          <button class="close-btn"></button>
+          <div class="modal-body">
+            <div class="left">
+              <div
+                style="
+                  --swiper-navigation-color: #fff;
+                  --swiper-pagination-color: #fff;
+                "
+                class="swiper mySwiper"
+              >
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="swiper-zoom-container">
+                      <img src="./assets/brain.jpg" />
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-zoom-container">
+                      <img
+                        src="https://swiperjs.com/demos/images/nature-2.jpg"
+                      />
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-zoom-container">
+                      <img
+                        src="https://swiperjs.com/demos/images/nature-3.jpg"
+                      />
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="swiper-zoom-container">
+                      <img
+                        src="https://swiperjs.com/demos/images/nature-4.jpg"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+            <div class="right">
+              <div class="head">
+                <h2>Schedule an Appointment</h2>
+                <p>
+                  Schedule your appointment now: Please fill up this form,
+                  Select a date that works best for you
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- carousel -->
     <script>
-      let scrollpos = window.scrollY;
-      const header = document.querySelector("nav");
-      const header_height = header.offsetHeight;
-
-      const add_class_on_scroll = () => header.classList.add("bg-light");
-      const remove_class_on_scroll = () => header.classList.remove("bg-light");
-
-      window.addEventListener("scroll", function () {
-        scrollpos = window.scrollY;
-
-        if (scrollpos >= header_height) {
-          add_class_on_scroll();
-        } else {
-          remove_class_on_scroll();
-        }
+      var swiper = new Swiper(".mySwiper", {
+        loop: true,
+        effect: "fade",
+        centeredSlides: true,
+        grabCursor: false,
+        autoplay: {
+          delay: 3500,
+          disableOnInteraction: false,
+        },
       });
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        let scrollpos = window.scrollY;
+        const header = document.querySelector("nav");
+        const header_height = header.offsetHeight;
 
-      // marquee
-      var elements = $("ul.marquee-item-list li").length;
-      for (var i = 0; i < elements; i++) {
-        $(".marquee-item-list").clone().prependTo(".marquee-block");
-      }
-      var liEle = [];
-      var liEle = $(".marquee-item-list li");
+        const add_class_on_scroll = () => header.classList.add("bg-light");
+        const remove_class_on_scroll = () =>
+          header.classList.remove("bg-light");
 
-      //buttons
-      document.querySelectorAll("button").forEach((button) => {
-        button.addEventListener("click", function () {
-          this.blur();
+        window.addEventListener("scroll", function () {
+          scrollpos = window.scrollY;
+
+          if (scrollpos >= header_height) {
+            add_class_on_scroll();
+          } else {
+            remove_class_on_scroll();
+          }
         });
-      });
 
-      // accordion
-      var accItem = document.getElementsByClassName("accordionItem");
-      var accHD = document.getElementsByClassName("acc-head");
-      for (i = 0; i < accHD.length; i++) {
-        accHD[i].addEventListener("click", toggleItem, false);
-      }
-      function toggleItem() {
-        var itemClass = this.parentNode.className;
-        for (i = 0; i < accItem.length; i++) {
-          accItem[i].className = "accordionItem close";
+        // marquee
+        let elements = $("ul.marquee-item-list li").length;
+        for (let i = 0; i < elements; i++) {
+          $(".marquee-item-list").clone().prependTo(".marquee-block");
         }
-        if (itemClass == "accordionItem close") {
-          this.parentNode.className = "accordionItem open";
+        var liEle = [];
+        var liEle = $(".marquee-item-list li");
+
+        //buttons
+        document.querySelectorAll("button").forEach((button) => {
+          button.addEventListener("click", function () {
+            this.blur();
+          });
+        });
+
+        // accordion
+        let accItem = document.getElementsByClassName("accordionItem");
+        let accHD = document.getElementsByClassName("acc-head");
+        for (i = 0; i < accHD.length; i++) {
+          accHD[i].addEventListener("click", toggleItem, false);
         }
-      }
+        function toggleItem() {
+          let itemClass = this.parentNode.className;
+          for (i = 0; i < accItem.length; i++) {
+            accItem[i].className = "accordionItem close";
+          }
+          if (itemClass == "accordionItem close") {
+            this.parentNode.className = "accordionItem open";
+          }
+        }
+
+        // modal
+        var modal = document.querySelector("#myModal");
+        var trigger = document.querySelector(".trigger");
+        var closeButton = document.querySelector(".close-btn");
+
+        function toggleModal() {
+          modal.classList.toggle("show-modal");
+          document.body.classList.toggle("modal-open");
+        }
+
+        trigger.addEventListener("click", toggleModal);
+        closeButton.addEventListener("click", toggleModal);
+      });
     </script>
   </body>
 </html>
