--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
         </div>
       </footer>
 
-      <div id="myModal" class="modal show-modal">
+      <div id="myModal" class="modal">
         <div class="modal-content">
           <button class="close-btn"></button>
           <div class="modal-body">
